fixed index page size issue on iphone 5 and 6

--- a/src/main/resources/static/custom.css
+++ b/src/main/resources/static/custom.css
@@ -490,6 +490,17 @@ footer img {
         height: 3rem;
     }
 
+    .btn.indexHeader {
+        font-size: 2.25em;
+    }
+
+}
+
+@media screen and (min-width: 350px) {
+    .btn.indexHeader {
+        font-size: 2.75em;
+    }
+
 }
 
 @media screen and (min-width: 500px){
